--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <title>Bank Tejarat</title>
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 	<main>
 		<header>
-			<img src="./tejarat-logo.png" alt="tejarat bank logo">
+			<img src="./assets/images/tejarat-logo.png" alt="tejarat bank logo">
 			<span>
 				<b>TejaratBank.ir</b>
 				<small>پشتیبانی : ۱۵۵۴</small>
